Bug 155342 - Show insertion/deletion of table columns in the Manage Changes dialog
Summary: Show insertion/deletion of table columns in the Manage Changes dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords:
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2023-05-16 07:51 UTC by NISZ LibreOffice Team
Modified: 2023-06-23 07:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-05-16 07:51:33 UTC
Description:
Show insertion/deletion of table columns in the Manage Changes dialog

Steps to Reproduce:
1. Insert a 3x3 table
2. Edit -> track changes -> Record ON (and show ON)
3. Insert a new columns
4. Edit -> track changes -> Manage -> notice a entry

Actual Results:
The insertion/deletion of table columns is not shown in the Manage Changes dialog

Expected Results:
Still present


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6f1534940ac12ff8e46f4782e18cfb6cf585da39
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 Commit Notification 2023-06-08 14:32:36 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cc52d895314dd7b67de916bd90ccbfa098e77419

tdf#155342 sw tracked table column: manage changes

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 László Németh 2023-06-08 14:33:00 UTC
commit description:

tdf#155342 sw tracked table column: manage changes

in Manage Changes dialog window, where deleted/inserted
table columns were shown as multiple cell changes.
Now deleted/inserted table columns are shown with a
single tree item in the dialog window instead of
showing multiple cell changes.

Add new Action icons to the tracked table column
insertion/deletion tree items (re-using table column
deletion/insertion icons).

Show cell changes as children of the single parent
item tracked table column change.

Accept/Reject and Accept/Reject All support
1-click acceptance or rejection of table column changes,
instead of clicking on all cell changes of a single
table column deletion/insertion.

Follow-up to commit commit eebe4747d2d13545004937bb0267ccfc8ab9d63f
"tdf#144270 sw: manage tracked table (row) deletion/insertion" and
commit ffd8d20d368a885d6d786749278fa438573227a7
"tdf#150673 sw xmloff: import/export tracked table column".
Comment 3 Commit Notification 2023-06-12 07:18:27 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/6d2376bedd833fde2ae4bbf9d9557c1af188c007

tdf#155342 sw tracked table column: manage changes

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2023-06-23 07:44:59 UTC
Verified in:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 986c2d86a7b53a6599d014db7327f47cb33d4fea
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded