tdf#155342 sw tracked table column: manage changes

in Manage Changes dialog window, where deleted/inserted
table columns were shown as multiple cell changes.
Now deleted/inserted table columns are shown with a
single tree item in the dialog window instead of
showing multiple cell changes.

Add new Action icons to the tracked table column
insertion/deletion tree items (re-using table column
deletion/insertion icons).

Show cell changes as children of the single parent
item tracked table column change.

Accept/Reject and Accept/Reject All support
1-click acceptance or rejection of table column changes,
instead of clicking on all cell changes of a single
table column deletion/insertion.

Follow-up to commit commit eebe4747d2d13545004937bb0267ccfc8ab9d63f
"tdf#144270 sw: manage tracked table (row) deletion/insertion" and
commit ffd8d20d368a885d6d786749278fa438573227a7
"tdf#150673 sw xmloff: import/export tracked table column".

Change-Id: Ie9c9d8ef707ee2581cf6d0b066c10901555ca04c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152711
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 67298969d80e106fd9a3727ab5d5a75fd8afd48c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152815