sw/qa/uitest/writer_tests/trackedChanges.py
@@ -281,6 +281,9 @@ class trackedchanges(UITestCase):
                 # Now: 4 changes (2 deleted/inserted rows and 2 deleted/inserted tables)
                 self.assertEqual(4, len(changesList.getChildren()))
 
+                # jump to the parent to allow rejecting the table change
+                changesList.executeAction("TYPE", mkPropertyValues({"KEYCODE": "LEFT"}))
+
                 # Without the fix in place, it would have crashed here
                 for i in (3, 2, 1, 0):
                     xAccBtn = xTrackDlg.getChild("reject")
@@ -499,5 +502,46 @@ class trackedchanges(UITestCase):
                     # This was false, because of not rejected tracked deletion
                     # of the text "inserts": "Document text inserts document"...
                     self.assertTrue(document.getText().getString().startswith('Document text document text'))
+
+    def test_tdf155342_tracked_table_colums(self):
+        with self.ui_test.load_file(get_url_for_data_file("TC-table-del-add.docx")) as document:
+
+            # accept all changes and insert new columns with change tracking
+            self.xUITest.executeCommand(".uno:AcceptAllTrackedChanges")
+            tables = document.getTextTables()
+            self.assertEqual(2, len(tables))
+            self.assertEqual(len(tables[0].getColumns()), 3)
+            self.xUITest.executeCommand(".uno:InsertColumnsAfter")
+            self.xUITest.executeCommand(".uno:InsertColumnsAfter")
+            self.assertEqual(len(tables[0].getColumns()), 5)
+
+            xToolkit = self.xContext.ServiceManager.createInstance('com.sun.star.awt.Toolkit')
+            xToolkit.processEventsToIdle()
+
+            # check and reject changes
+            with self.ui_test.execute_modeless_dialog_through_command(".uno:AcceptTrackedChanges", close_button="close") as xTrackDlg:
+                changesList = xTrackDlg.getChild("writerchanges")
+
+                # six changes, but only one visible in the Manage Changes dialog window
+                state = get_state_as_dict(changesList)
+                self.assertEqual(state['Children'], '6')
+                self.assertEqual(state['VisibleCount'], '1')
+
+                # This was 6 (every cell is a different change instead of counting column changes)
+                # Now: 1 changes (2 inserted columns)
+                self.assertEqual(1, len(changesList.getChildren()))
+
+                # reject column insertion
+
+                xAccBtn = xTrackDlg.getChild("reject")
+                xAccBtn.executeAction("CLICK", tuple())
+
+                # all inserted columns are removed
+
+                self.assertEqual(len(tables[0].getColumns()), 3)
+
+                # no changes in the dialog window
+
+                self.assertEqual(0, len(changesList.getChildren()))
 
 # vim: set shiftwidth=4 softtabstop=4 expandtab:
